fix 1.21 issues (#1918)