@@ -8,7 +8,6 @@ import com.gregtechceu.gtceu.api.machine.trait.NotifiableFluidTank;
 import com.gregtechceu.gtceu.api.recipe.GTRecipe;
 import com.gregtechceu.gtceu.data.material.GTMaterials;
 
-import net.minecraft.world.item.crafting.RecipeHolder;
 import net.neoforged.neoforge.fluids.FluidStack;
 import net.neoforged.neoforge.fluids.crafting.SizedFluidIngredient;
 
@@ -34,7 +33,7 @@ public class SteamEnergyRecipeHandler implements IRecipeHandler<Long> {
     }
 
     @Override
-    public List<Long> handleRecipeInner(IO io, RecipeHolder<GTRecipe> recipe, List<Long> left,
+    public List<Long> handleRecipeInner(IO io, GTRecipe recipe, List<Long> left,
                                         @Nullable String slotName,
                                         boolean simulate) {
         long sum = left.stream().reduce(0L, Long::sum);
@@ -46,7 +45,7 @@ public class SteamEnergyRecipeHandler implements IRecipeHandler<Long> {
             list.add(steam);
             var leftSteam = steamTank.handleRecipeInner(io, recipe, list, slotName, simulate);
             if (leftSteam == null || leftSteam.isEmpty()) return null;
-            sum = (long) (leftSteam.get(0).amount() / conversionRate);
+            sum = (long) (leftSteam.getFirst().amount() / conversionRate);
         }
         return sum <= 0 ? null : Collections.singletonList(sum);
     }
